examples/test/testpolicy15733.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15733
  namespace: namespace258
spec:
  podSelector:
    matchLabels:
      key32: value19
      key33: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value33
          key39: value49
          key44: value3
      podSelector:
        matchLabels:
          key16: value32
